fixed body spacing

--- a/public/css/index.less
+++ b/public/css/index.less
@@ -509,6 +509,7 @@ footer p {
 .navbar-default
   .navbar-text {
     font-weight: 900;
+    font-family: 'Nunito';
     color: #cd5257;
     padding-top: 15px;
     font-size: 16px;
@@ -526,7 +527,8 @@ footer p {
   }
 
   .navbar-default .navbar-text {
-    font-weight: 900;
+    font-weight: bold;
+    font-family: 'Nunito';
     color: #cd5257;
     margin-left: 60px;
     padding-top: 15px;
@@ -623,15 +625,6 @@ footer p {
       width: 100%;
       padding: 0 15px 0 15px;
     }
-    .sustainable {
-      padding-top: 0;
-      padding-bottom: 50px;
-      .container {
-        width: 100%;
-      }
-      .content {
-        padding-top: 0;
-      }
     }
     .redbox {
       .container {
@@ -696,38 +689,4 @@ footer p {
   max-width: 23%;
   margin: 3% 3% 0 3%;
   max-height: 60px;
-}
-
-#bloomberg img {
-  height: 45px;
-}
-#grammatech img {
-  height: 60px;
-}
-#a16z img {
-  height: 35px;
-}
-
-#wayfair img {
-  width: 35%;
-  margin-right: 0px;
-}
-
-#eship img {
-  width: 35%;
-}
-
-#jetbrains img {
-  margin-left: -45px;
-  margin-top: -20px;
-  max-height: none;
-  height: 130px;
-}
-
-#equitas img {
-  margin-top: -20px;
-}
-
-#clerky img {
-  margin-top: -20px;
 }
